--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -93,59 +93,39 @@
     <aside class="main-sidebar main-sidebar-custom sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="../../index3.html" class="brand-link">
-        <img src="./../../assets/apolloLogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+        <img src="./../../assets/apolloLogo.png" alt="Apollo Group Logo" class="brand-image img-circle elevation-3"
           style="opacity: .8">
-        <span class="brand-text font-weight-light">Apollo Group</span>
+        <span class="brand-text font-weight-bold">Apollo Group</span> <!-- Negrita para destacar -->
       </a>
 
       <!-- Sidebar -->
       <div class="sidebar">
-        <!-- Sidebar user (optional) -->
+        <!-- Sidebar user -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="./../../assets/apolloLogo.png" class="img-circle elevation-2" alt="User Image">
+            <img src="./../../assets/default-photo.png" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">Admin</a>
-          </div>
-        </div>
-
-        <!-- SidebarSearch Form -->
-        <div class="form-inline">
-          <div class="input-group" data-widget="sidebar-search">
-            <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-            <div class="input-group-append">
-              <button class="btn btn-sidebar">
-                <i class="fas fa-search fa-fw"></i>
-              </button>
-            </div>
+            <a href="#" class="d-block text-warning">Admin</a> <!-- Clase 'text-warning' para amarillo -->
           </div>
         </div>
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
-          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
+          <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false">
+            <!-- Dashboard -->
             <li class="nav-item">
-              <a href="#" class="nav-link" data-widget="treeview">
+              <a [routerLink]="'/dashboard'" class="nav-link" >
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
                   Dashboard
-                  <i class="right fas fa-angle-left"></i>
                 </p>
               </a>
-              <ul class="nav nav-treeview">
-                <li class="nav-item">
-                  <a href="#" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Dashboard v1</p>
-                  </a>
-                </li>
-              </ul>
             </li>
+            <!-- Deportes -->
             <li class="nav-item">
-              <a href="" class="nav-link" data-widget="treeview">
-                <i class="nav-icon fas fa-tachometer-alt"></i>
+              <a href="#" class="nav-link" (click)="toggleSubmenu($event)">
+                <i class="nav-icon fas fa-football-ball"></i>
                 <p>
                   Deportes
                   <i class="right fas fa-angle-left"></i>
@@ -153,61 +133,91 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="" class="nav-link">
+                  <a href="#" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Voleibol</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Futbol</p>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">
+                  <a href="#" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Beisbol</p>
                   </a>
                 </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Futbol</p>
+                  </a>
+                </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a href="../widgets.html" class="nav-link">
-                <i class="nav-icon fas fa-th"></i>
-                <p>
-                  Widgets
-                  <span class="right badge badge-danger">New</span>
-                </p>
+            <li class="nav-item"> <a href="#" class="nav-link" (click)="toggleSubmenu($event)"> <i
+                  class="nav-icon fas fa-tachometer-alt"></i>
+                <p> Mi Perfil <i class="right fas fa-angle-left"></i> </p>
               </a>
+              <ul class="nav nav-treeview" style="display: none;">
+                <li class="nav-item"> <a [routerLink]="'/my-account'" class="nav-link">Gestionar mi Cuenta</a> </li>
+                <li class="nav-item"> <a [routerLink]="'/personal-information'" class="nav-link">Información Personal</a> </li>
+                <li class="nav-item"> <a href="#" class="nav-link">Mis estadisticas / habilidades</a> </li>
+              </ul>
             </li>
           </ul>
         </nav>
-        <!-- /.sidebar-menu -->
       </div>
-      <!-- /.sidebar -->
+
 
       <div class="sidebar-custom">
-        <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a>
-        <a href="#" class="btn btn-secondary hide-on-collapse pos-right">Help</a>
+        <a href="#" class="btn btn-secondary hide-on-collapse pos-right"
+          style="background-color: #FFD700; color: #000000;">Cerrar sesión</a>
       </div>
-      <!-- /.sidebar-custom -->
+      <!-- <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a> -->
     </aside>
+    <!-- Content Wrapper. Contains page content 
+    <div class="content-wrapper">
+    Content Header (Page header) 
+      <section class="content-header">
+        <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1>Fixed Layout</h1>
+            </div>
+            <div class="col-sm-6">
+              <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Layout</a></li>
+                <li class="breadcrumb-item active">Fixed Layout</li>
+              </ol>
+            </div>
+          </div>
+        </div> /.container-fluid 
+      </section> -->
 
-    <!-- Content Wrapper.
-    <footer class="main-footer">
-      <div class="float-right d-none d-sm-block">
-        <b>Version</b> 3.2.0
+    <!-- Main content -->
+    <section class="content-wrapper">
+
+      <div class="container-fluid">
+        <router-outlet></router-outlet>
       </div>
-      <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
-    </footer>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+    </section>
+    <!-- /.content -->
   </div>
+  <!-- /.content-wrapper -->
+
+  <!-- Content Wrapper. -->
+  <footer class="main-footer">
+    <div class="float-right d-none d-sm-block">
+      <b>Versión</b> 1.0
+    </div>
+    <strong>Copyright &copy; 2025 | Apollo Group - Academia Deportiva. </strong> All rights reserved.
+  </footer>
+
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+  </aside>
+  <!-- /.control-sidebar -->
+
   <!-- ./wrapper -->
 
   <!-- jQuery -->
